Adding citations for estimating program performance to the thesis.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -435,3 +435,41 @@ journal = {Science}
   year={2000},
   publisher={Addison-Wesley Professional}
 }
+
+@article{Park1993,
+ author = {Park, Chang Yun},
+ title = {Predicting Program Execution Times by Analyzing Static and Dynamic Program Paths},
+ journal = {Real-Time Syst.},
+ issue_date = {March 1993},
+ volume = {5},
+ number = {1},
+ month = mar,
+ year = {1993},
+ issn = {0922-6443},
+ pages = {31--62},
+ numpages = {32},
+ url = {http://dx.doi.org/10.1007/BF01088696},
+ doi = {10.1007/BF01088696},
+ acmid = {161231},
+ publisher = {Kluwer Academic Publishers},
+ address = {Norwell, MA, USA},
+}
+
+@article{Tiwari1996,
+ author = {Tiwari, Vivek and Malik, Sharad and Wolfe, Andrew and Lee, Mike Tien-Chien},
+ title = {Instruction Level Power Analysis and Optimization of Software},
+ journal = {J. VLSI Signal Process. Syst.},
+ issue_date = {Aug./Sept. 1996},
+ volume = {13},
+ number = {2-3},
+ month = aug,
+ year = {1996},
+ issn = {0922-5773},
+ pages = {223--238},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1007/BF01130407},
+ doi = {10.1007/BF01130407},
+ acmid = {239458},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+} 
