Adding some more references that study the complexity of music as experienced by listeners or observers.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -471,5 +471,65 @@ journal = {Science}
  doi = {10.1007/BF01130407},
  acmid = {239458},
  publisher = {Kluwer Academic Publishers},
- address = {Hingham, MA, USA},
+ address = {Hingham, MA, USA}
 } 
+
+@Misc{SMT,
+author = {{Society for Music Theory}},
+title = {MTO a Journal for the Society for Music Theory},
+howpublished = {\url{http://www.mtosmt.org/index.php}},
+year = {2015},
+}
+
+@Misc{MusicTheoryNet,
+author = {{MusicTheory.net LLC}},
+title = {MusicTheory.net},
+howpublished = {\url{http://www.musictheory.net/}},
+year = {2015},
+}
+
+@article{css,
+  title={Cascading Style Sheets, level 2 CSS2 Specification},
+  author={Bos, Bert and Lie, H{\aa}kon Wium and Lilley, Chris and Jacobs, Ian},
+  publisher={Citeseer}
+}
+
+@article{madsen2006music,
+  title={Music complexity measures predicting the listening experience},
+  author={Madsen, S{\o}ren Tjagvad and Widmer, Gerhard},
+  journal={Entropy},
+  volume={1},
+  number={4},
+  pages={1},
+  year={2006}
+}
+
+@phdthesis{streich2006automatic,
+  title={Automatic Characterization of Music Complexity: a multifaceted approach},
+  author={Streich, Sebastian},
+  year={2006},
+  school={Citeseer}
+}
+
+@article{edmonds1995complexity,
+  title={What is Complexity?-The philosophy of complexity per se with application to some examples in evolution},
+  author={Edmonds, Bruce},
+  journal={The evolution of complexity},
+  year={1995},
+  publisher={Kluwer, Dordrecht}
+}
+
+@inproceedings{pressing1999cognitive,
+  title={Cognitive complexity and the structure of musical patterns},
+  author={Pressing, Jeffrey},
+  booktitle={Proceedings of the 4th Conference of the Australasian Cognitive Science Society},
+  year={1999}
+}
+
+@inproceedings{scheirer2000perceived,
+  title={On the perceived complexity of short musical segments},
+  author={Scheirer, Eric D and Watson, Richard B and Vercoe, Barry L},
+  booktitle={Proceedings of the 2000 International Conference on Music Perception and Cognition},
+  year={2000},
+  organization={Citeseer}
+}
