Adding in more references.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -533,3 +533,58 @@ year = {2015},
   year={2000},
   organization={Citeseer}
 }
+
+@inproceedings{nguyen2007sloc,
+  title={A SLOC counting standard},
+  author={Nguyen, Vu and Deeds-Rubin, Sophia and Tan, Thomas and Boehm, Barry},
+  booktitle={COCOMO II Forum},
+  volume={2007},
+  year={2007}
+}
+
+@article{downie2003music,
+  title={Music information retrieval},
+  author={Downie, J Stephen},
+  journal={Annual review of information science and technology},
+  volume={37},
+  number={1},
+  pages={295--340},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+@article{casey2008content,
+  title={Content-based music information retrieval: Current directions and future challenges},
+  author={Casey, Michael A and Veltkamp, Remco and Goto, Masataka and Leman, Marc and Rhodes, Christophe and Slaney, Malcolm},
+  journal={Proceedings of the IEEE},
+  volume={96},
+  number={4},
+  pages={668--696},
+  year={2008},
+  publisher={IEEE}
+}
+
+@inproceedings{holder2013cloudASE,
+  title={Cloud Twin: Native execution of android applications on the Windows Phone},
+  author={Holder, Ethan and Shah, Eeshan and Davoodi, Mohammed and Tilevich, Eli},
+  booktitle={Automated Software Engineering (ASE), 2013 IEEE/ACM 28th International Conference on},
+  pages={598--603},
+  year={2013},
+  organization={IEEE}
+}
+
+@inproceedings{holder2013cloudSPLASH,
+  title={Cloud twin: interactive cross-platform replay for mobile applications},
+  author={Holder, Ethan},
+  booktitle={Proceedings of the 2013 companion publication for conference on Systems, programming, \& applications: software for humanity},
+  pages={119--120},
+  year={2013},
+  organization={ACM}
+}
+
+@phdthesis{holder2014native,
+  title={Native Execution of Mobile Applications Across Platforms},
+  author={Holder, Ethan G.},
+  year={2014},
+  school={Virginia Polytechnic Institute and State University}
+}
