--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -330,20 +330,24 @@ The most relevant works to musiplectics are those that also seek to analyze the 
 
 Similar to \cite{Chiu2012}, \cite{Heijink2002} studies the complexity of playing guitar. Their work extracts features that determine difficulty when playing guitar. However, their focus lies more on the mechanical difficulties specifically associated with that instrument rather than broad ranging complexities of playing music on any instrument. Musiplectics also takes into account the playing proficiency of the player at hand.
 
-Another related approach to ours is \cite{Liou2010}. The authors analyze the complexity of the rhythmic components of various pieces of music. They utilize the L-system to breakdown the rhythm of a piece into a tree structure and then apply tree analysis algorithms to generate a score. Although musiplectics avoids complex algorithms for examining the rhythmic structure of a piece, it considers a full array of the elements of music scores rather than rhythm alone.
+Another related approach lies in \cite{Liou2010}. The authors analyze the complexity of the rhythmic components of various pieces of music. They utilize the L-system to breakdown the rhythm of a piece into a tree structure and then apply tree analysis algorithms to generate a score. Although musiplectics avoids complex algorithms for examining the rhythmic structure of a piece, it considers a full array of the elements of music scores rather than simply rhythm alone.
 
-State organizations, such as \cite{VBODA} in Virginia and \cite{NYSSMA} in New York as well as others, similarly analyze music scores by hand, an activity which we hope to automate. These organizations govern K-12 schools in their respective states. They also list music pieces and their respective difficulty grades for district, regional, or state competitions for each K-12 grade level. Other organizations, such as the Royal Conservatory Music Development Program \cite{RoyalSyllabus}, offer similar pieces and respective grades as part of their level requirements and assessment regulations. Unlike state organizations, Royal Conservatory publishes their pieces and scores to the public, a provision that enables us to leverage them in evaluating our work.
+State organizations, such as \cite{VBODA} in Virginia and \cite{NYSSMA} in New York as well as others, similarly analyze music scores by hand, an activity which we hope to automate. These organizations govern K-12 schools in their respective states. They also list music pieces and their respective difficulty grades for district, regional, or state competitions for each K-12 grade level. Other organizations, such as the Royal Conservatory Music Development Program \cite{RoyalSyllabus}, offer similar pieces and respective grades as part of their level requirements and assessment regulations. Unlike state organizations, Royal Conservatory publishes their pieces and scores to the public, a provision that enables leveraging them in evaluating this work.
 
 The difficulty grading schemes in both types of organizations are analogous to the complexity of the piece, except that in these organizations pieces are graded subjectively by a group of people rather than a uniform algorithm. Additionally, the grades are typically listed as integer values between 1 and 10, thus lacking a sufficient level of granularity to express nuanced differences between musical pieces.
 
-Some past works have specifically studied the complexity of music as experienced by listeners or observers. These works show great insights into defining complexity and in fact utilize very similar music elements as representative features to determine overall complexity. For instance, \cite{madsen2006music} relies on note pitches, intervals, and durations of notes as features on pieces of MIDI formatted music to determine the complexity experienced by listeners. Similarly, \cite{streich2006automatic} presents an entire Ph. D. thesis on characterizing the complexity of music from the viewpoint of the listener. Several related works from \cite{streich2006automatic} also formally define what complexity is in terms of listeners and what information can be gathered from it as a property of music \cite{edmonds1995complexity} \cite{pressing1999cognitive} \cite{scheirer2000perceived}. While this thesis focuses on the complexity experienced by performers, such related works all provide a basis to build upon.
+Further past works have specifically studied the complexity of music as experienced by listeners or observers. These works show great insights into defining complexity and in fact utilize very similar music elements as representative features to determine overall complexity. For instance, \cite{madsen2006music} relies on note pitches, intervals, and durations of notes as features on pieces of MIDI formatted music to determine the complexity experienced by listeners. Similarly, \cite{streich2006automatic} presents an entire Ph. D. thesis on characterizing the complexity of music from the viewpoint of the listener.
+
+Several related works from \cite{streich2006automatic} also formally define what complexity is in terms of listeners and what information can be gathered from it as a property of music \cite{edmonds1995complexity} \cite{pressing1999cognitive} \cite{scheirer2000perceived}. While this thesis focuses on the complexity experienced by performers, such related works all provide a basis to build upon. Future work could seek to compare the complexity experienced by listeners or observers to that of the performer to see what similarities (if any) arise.
 
 \section{Music Scan \& Search}
 \label{sec:relscan}
 
-One area of research tangential to analyzing music complexity is scanning and searching for music. The overlap lies chiefly in the end use cases in both areas of research. Educators, performers, and other stakeholders, all find themselves needing to efficiently locate musical pieces that meet their respective requirements. Providing a complexity score is one means to improve the efficiency of searching for new music, since users can see complexity at a glance or even search by complexity to find a piece to prepare. \cite{Byrd2001} gives many reasons for why this is necessary, but there is a whole body of research related to music information retrieval that deals with similar problems.
+One area of research tangential to analyzing music complexity is scanning and searching for music. The overlap lies chiefly in the end use cases in both areas of research. Educators, performers, and other stakeholders, all find themselves needing to efficiently locate musical pieces that meet their respective requirements. Providing a complexity score is one means to improve the efficiency of searching for new music, since users can see complexity at a glance or even search by complexity to find a piece to prepare. \cite{Byrd2001} gives many reasons for why this is necessary, but there is a whole body of research related to music information retrieval that deals with similar problems \cite{downie2003music} \cite{casey2008content}.
 
-Another area of overlap between musiplectics and music scanning is in translation. From a high-level, reading in any form of music and writing out a related, different form is essentially translation. There are many research efforts to translate forms of music into other languages or versions. An especially interesting effort in this regard is \cite{Allali2009}. The authors work to convert polyphonic music (music with several simultaneous notes on one or several instruments, such as a band playing together in harmony or one person playing piano or guitar for instance) into equivalent monophonic music. Their end goal is to reduce a large, expressive format to a more simple one for comparing pieces during a lookup. The reduction in complexity of chords down to single notes represents an interesting approach that could be leveraged with musiplectics, so as to generate a potentially less complex version of a given piece.
+Another area of overlap between musiplectics and music scanning is in translation. From a high-level, reading in any form of music and writing out a related, different form is essentially translation, an area which I have previously explored in some depth \cite{holder2013cloudASE} \cite{holder2013cloudSPLASH} \cite{holder2014native}. There are many research efforts to translate forms of music into other languages or versions.
+
+An especially interesting effort in this regard is \cite{Allali2009}. The authors work to convert polyphonic music (music with several simultaneous notes on one or several instruments, such as a band playing together in harmony or one person playing piano or guitar for instance) into equivalent monophonic music. Their end goal is to reduce a large, expressive format to a more simple one for comparing pieces during a lookup. The reduction in complexity of chords down to single notes represents an interesting approach that could be leveraged with musiplectics, so as to generate a potentially less complex version of a given piece.
 
 \section{Music Classification}
 \label{sec:relclass}
@@ -412,9 +416,9 @@ The system itself can be extended to operate only on specific selections of piec
 
 The reference implementation spans several different code bases, most notably the automated processor backend and the web UI frontend. Both are publicly available on GitHub \cite{GithubMusicScoring} along with instructions as to how to set them up and links to the current deployed version.\footnote{The current version is deployed at \url{http://mickey.cs.vt.edu/}}
 
-The backend code is written in Java \cite{java} with some limited PHP to facilitate server communication. We've utilized the Apache Xerces 2.11.0 library for parsing xml files \cite{XMLAPI} and the JSON Simple 1.1.1 library \cite{JSONAPI} for constructing JSON to pass along to the frontend. The backend utilizes the visitor pattern heavily so as to ease the handling of the intricacies and redundancies of processing MusicXML.
+The backend code is written in Java \cite{java} with some limited PHP to facilitate server communication and spans 5137 source lines of code (SLOC) \cite{nguyen2007sloc}. We've utilized the Apache Xerces 2.11.0 library for parsing xml files \cite{XMLAPI} and the JSON Simple 1.1.1 library \cite{JSONAPI} for constructing JSON to pass along to the frontend. The backend utilizes the visitor pattern heavily so as to ease the handling of the intricacies and redundancies of processing MusicXML.
 
-The frontend code is written in Javascript, HTML, and CSS. To minimize the amount of hand-written code, our implementation makes use of numerous libraries, including jQuery 2.1.0 \cite{jQuery}, Bootstrap 3.3.4 \cite{Bootstrap}, Datafs 1.10.5 \cite{DataTables}, D3 3.5.5 \cite{D3}, and VexFlow 1.2.27 \cite{VexFlow}. These libraries greatly facilitate various standard facets of system implementation, making it possible for us to focus on the novel, research-related issues of musiplectics.
+The frontend code is written in Javascript, HTML, and CSS and spans 3061 SLOC \cite{nguyen2007sloc}. To minimize the amount of hand-written code, our implementation makes use of numerous libraries, including jQuery 2.1.0 \cite{jQuery}, Bootstrap 3.3.4 \cite{Bootstrap}, Datafs 1.10.5 \cite{DataTables}, D3 3.5.5 \cite{D3}, and VexFlow 1.2.27 \cite{VexFlow}. These libraries greatly facilitate various standard facets of system implementation, making it possible for us to focus on the novel, research-related issues of musiplectics.
 
 \chapter{Evaluation} 
 \label{sec:eval}
